--- a/app.json
+++ b/app.json
@@ -1,107 +1,86 @@
 {
-  "name": "PRINCE MDXI",
-  "description": "ᴊᴀᴠᴀsᴄʀɪᴘᴛ ᴡʜᴀᴛsᴀᴘᴘ ʙᴏᴛ ᴄʀᴇᴀᴛᴇᴅ ʙʏ ᴘʀɪɴᴄᴇ ᴍᴅx  ",
-  "logo": "https://raw.githubusercontent.com/Mayelprince/url/main/url/1264.jpg",
+  "name": "Xchriss Bot",
+ "description": "Simple WhatsApp MD bot Created by Tᴀɪʀᴀ Mᴀᴋɪɴᴏ.",
+  "logo": "https://raw.githubusercontent.com/anonphoenix007/storage/main/logo.jpg",
   "keywords": ["bot"],
   "success_url": "/",
-
     "stack": "container",
   "env": {
     "SESSION_ID": {
-      "description": "Put the session-id here.",
+      "description": "session ID here.",
       "required": true,
       "value": ""
     },  
-    
-    "ALIVE_IMG": {
-      "description": "paste your image url if you don't have you can use this public url.",
-      "required": true,
-      "value": "https://raw.githubusercontent.com/Mayelprince/url/main/url/1264.jpg"
-    }, 
-    
-    "ALIVE_MSG": {
-      "description": "paste your alive message hear.",
-      "required": true,
-      "value": "HI DEAR IM ONLINE.!!♻️"
-    },
-    
-    "PREFIX": {
-      "description": "paste your bot prefix note! Don't apply null prefix.",
+    "HANDLERS": {
+      "description": "bot prefix here",
       "required": true,
       "value": "."
     },
     
     "MODE": {
-      "description": "select your bot work type public-private-inbox-group.",
+      "description": "Bot mode, private or public.",
       "required": true,
       "value": "public"
     }, 
 
-    "AUTO_VOICE": {
-      "description": "Make it true if you want bot auto voice.",
+    "ANTICALL": {
+      "description": "Anticall.",
       "required": true,
-      "value": "true"
+      "value": "false"
+    }, 
+    "SUDO": {
+      "description": "bot owner numbers separated by comma.",
+      "required": true,
+      "value": "2349072958046"
     }, 
 
-    "AUTO_REPLY": {
-      "description": "Make it true if you want bot auto reply.",
-      "required": true,
-      "value": "true"
-    }, 
-
-    "AUTO_STICKER": {
-      "description": "Make it true if you want bot auto sticker.",
+    "READ_STATUS": {
+      "description": "Auto read status.",
       "required": true,
       "value": "false"
     }, 
 
-    "AUTO_READ_STATUS": {
-      "description": "Make it true if you want bot auto auto_read_status.",
+    "ANTILINK": {
+      "description": "",
       "required": true,
-      "value": "true"
-    }, 
-
-    "ANTI_LINK": {
-      "description": "Make it true if you want bot auto remove group link.",
-      "required": true,
-      "value": "true"
+      "value": "false"
     },
 
-    "ANTI_BAD": {
-      "description": "Make it true if you want bot auto delete bad words from group example xxx porn etc.",
+    "READ_MSG": {
+      "description": "auto read messages",
       "required": true,
       "value": "false"
     }, 
 
-    "FAKE_RECORDING": {
-      "description": "Make it true if you want bot fake record.",
+    "PRESENCE": {
+      "description": "Always online, 1 - composing, 2 - recording, 3 - available, 4 - unavailable",
       "required": true,
       "value": "true"
     },
 
-    "AUTO_REACT": {
-      "description": "Make it true if you want bot AutoReact.",
+    "ANTIDELETE": {
+      "description": "Antidelete messages",
       "required": false,
-      "value": "false"
+      "value": "true"
     },
 
-    "OWNER_REACT": {
-      "description": "Make it true if you want bot OwnerReact.",
+    "GREETINGS": {
+      "description": "welcome and goodbye messages in groups.",
       "required": false,
-      "value": "false"
+      "value": "true"
     
     }, 
 
-    "BOT_NAME": {
-      "description": "write hear your name.",
+    "OWNER_NUMBER": {
+      "description": "bot owner number",
       "required": true,
-      "value": "𝗣𝗥𝗜𝗡𝗖𝗘 𝗠𝗗𝗫"
+      "value": "2349072958046"
     }, 
 
-    "HEART_REACT": {
-      "description": "Make it true if you want bot only heart ♥️ emjois reaction .",
+    "PDM": {
+      "description": "promote and demote messages .",
       "required": true,
-      "value": "false"
+      "value": "true"
     }
 
 },
