--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "sequelize": "^6.37.7",
     "sharp": "^0.32.6",
     "sqlite3": "^5.1.7",
+    "util": "^0.12.5",
     "wa-sticker-formatter": "^4.3.2"
   }
 }
