--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "sharp": "^0.32.6",
     "sqlite3": "^5.1.7",
     "util": "^0.12.5",
-    "wa-sticker-formatter": "^4.3.2"
+    "wa-sticker-formatter": "^4.3.2",
+    "yt-search":"2.11.1"
   }
 }
