--- a/app.json
+++ b/app.json
@@ -88,6 +88,9 @@
      "buildpacks": [
         {
             "url": "https://github.com/heroku/heroku-buildpack-nodejs.git"
+        },
+        {
+        	"url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest.git"
         }
      ],
   "stack": "heroku-24"
