--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "human-readable": "^0.2.1",
     "megajs": "^1.3.1",
     "moment-timezone": "^0.5.48",
+    "node-fetch": "^2.6.1",
     "nsfwhub": "0.0.2",
     "path": "^0.12.7",
     "performance-now": "2.1.0",
