--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "fs": "^0.0.1-security",
     "google-tts-api": "2.0.2",
     "human-readable": "^0.2.1",
+    "jimp": "^0.16.1",
     "megajs": "^1.3.1",
     "moment-timezone": "^0.5.48",
     "node-fetch": "^2.6.1",
