--- a/package.json
+++ b/package.json
@@ -3,16 +3,21 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+        "node": "18.19.1"
+    },
   "scripts": {
     "start": "node server.js"
   },
   "author": "Taira Makino",
   "license": "ISC",
   "dependencies": {
+    "@hapi/boom": "^10.0.1",
     "awesome-phonenumber": "^2.70.0",
     "axios": "0.21.4",
-    "baileys": "6.7.16",
+    "baileys": "github:anonphoenix007/Baileys-6.7.16",
     "cheerio": "^1.0.0",
+    "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "file-type": "^16.5.3",
     "fluent-ffmpeg": "^2.1.3",
@@ -20,7 +25,6 @@
     "google-tts-api": "2.0.2",
     "human-readable": "^0.2.1",
     "jimp": "^0.16.1",
-    "megajs": "^1.3.1",
     "moment-timezone": "^0.5.48",
     "node-fetch": "^2.6.1",
     "nsfwhub": "0.0.2",
